AAAAAAAAAAAAAAAAAAA
Refactoreado todo para poder finalmente quitar los equals de opcion

escribiendo esto recuerdo que no quite esos equals.... pero ANYWAY, refactor grande, ahora cada pregunta maneja solo sus tipo de opcion, tira error el estado de turno si no haces eso, y todo es felicidad con tests mas lindos