@@ -6,8 +6,10 @@ import edu.fiuba.algo3.modelo.Modificador.Modificador;
 import edu.fiuba.algo3.modelo.Respuesta.Respuesta;
 import edu.fiuba.algo3.modelo.Fabricas.FabricaModificadores;
 
+import edu.fiuba.algo3.modelo.opcion.Grupo;
 import edu.fiuba.algo3.modelo.opcion.Opcion;
 import edu.fiuba.algo3.modelo.opcion.estado.Correcta;
+import edu.fiuba.algo3.modelo.opcion.estado.Incorrecta;
 import edu.fiuba.algo3.modelo.pregunta.GroupChoice;
 import edu.fiuba.algo3.modelo.pregunta.Pregunta;
 import edu.fiuba.algo3.modelo.puntaje.Clasica;
@@ -35,7 +37,7 @@ public class GroupChoiceTest {
     static List<String> contenidoOpciones;
     static List<String> posicionesCorrectas;
     private static Clasica clasica;
-    private List<Opcion> opcionesCorrectas;
+    private List<Grupo> opcionesPregunta;
     private List<Respuesta> respuestas;
 
     @BeforeAll
@@ -43,7 +45,7 @@ public class GroupChoiceTest {
         clasica = new Clasica(3);
         grupos = Arrays.asList("Mamifero", "Pez");
         contenidoOpciones = Arrays.asList("Gato","Tiburon", "Perro");
-        posicionesCorrectas= Arrays.asList("1","3","0","2");
+        posicionesCorrectas= List.of("1","3","0","2");
 
 
     }
@@ -55,7 +57,7 @@ public class GroupChoiceTest {
 
 
 
-        opcionesCorrectas= FabricaOpciones.crearListaGrupo(grupos,contenidoOpciones,posicionesCorrectas, new Correcta());
+        opcionesPregunta= FabricaOpciones.crearListaGrupo(grupos,contenidoOpciones,posicionesCorrectas, new Correcta());
 
 
         respuestas= new ArrayList<>();
@@ -68,14 +70,14 @@ public class GroupChoiceTest {
     public void test01GroupChoiceAsignaPuntajeCorrectoAJugadorQueRespondeCorrectamente(){
         //Arrange
 
-        Pregunta pregunta = new Pregunta(
+        Pregunta pregunta = new GroupChoice(
                 "Poner las siguientes preguntas en su grupo correspondiente",
-                opcionesCorrectas,
+                opcionesPregunta,
                 clasica,
                 "Animales","Say no More"
-        ) {
-        };
-        Respuesta respuesta= new Respuesta(opcionesCorrectas,jugador1);
+        );
+        List<Opcion> opcionesJugador=new ArrayList<>(opcionesPregunta);
+        Respuesta respuesta= new Respuesta(opcionesJugador,jugador1);
         respuestas.add(respuesta);
 
         //Act
@@ -91,13 +93,13 @@ public class GroupChoiceTest {
 
         Pregunta pregunta = new GroupChoice(
                 "Poner las siguientes preguntas en su grupo correspondiente",
-                opcionesCorrectas,
+                opcionesPregunta,
                 clasica,
                 "Animales","Say no More"
         );
 
 
-        List<Opcion> opcionesJugador=new ArrayList<>();
+        List<Opcion> opcionesJugador=new ArrayList<>(FabricaOpciones.crearListaGrupo(grupos,contenidoOpciones,List.of("2","0"), new Incorrecta()));
         Respuesta respuesta= new Respuesta(opcionesJugador,jugador1);
         respuestas.add(respuesta);
 
@@ -115,11 +117,11 @@ public class GroupChoiceTest {
 
          Pregunta pregunta = new GroupChoice(
                 "Poner las siguientes preguntas en su grupo correspondiente",
-                opcionesCorrectas,
+                opcionesPregunta,
                 clasica,
                 "Animales","Say no More"
          );
-        List<Opcion> opcionesJugador=new ArrayList<>();
+        List<Opcion> opcionesJugador=new ArrayList<>(FabricaOpciones.crearListaGrupo(grupos,contenidoOpciones,List.of("2","0","1","3"), new Incorrecta()));
         Respuesta respuesta= new Respuesta(opcionesJugador,jugador1);
         respuestas.add(respuesta);
 
@@ -138,12 +140,12 @@ public class GroupChoiceTest {
 
         Pregunta pregunta = new GroupChoice(
                 "Poner las siguientes preguntas en su grupo correspondiente",
-                opcionesCorrectas,
+                opcionesPregunta,
                 clasica,
                 "Animales","Say no More"
         );
 
-        List<Opcion> opcionesJugador=new ArrayList<>();
+        List<Opcion> opcionesJugador=new ArrayList<>(FabricaOpciones.crearListaGrupo(grupos,contenidoOpciones,List.of("1","0","2"), new Incorrecta()));
         Respuesta respuesta= new Respuesta(opcionesJugador,jugador1);
         respuestas.add(respuesta);
 
